compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__dont_suggest_unqualified_import_for_value.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\n        pub fn go() { wobble() }\n        "
---
----- SOURCE CODE
-- gleam/wibble.gleam

            pub fn wobble() { 1 }
            

-- main.gleam

        pub fn go() { wobble() }
        

----- ERROR
error: Unknown variable
  ┌─ /src/one/two.gleam:2:23
  │
2 │         pub fn go() { wobble() }
  │                       ^^^^^^

The name `wobble` is not in scope here.
