compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__double_assignment_in_bit_array.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: let assert <<a as b>> = <<>>
---
----- SOURCE CODE
let assert <<a as b>> = <<>>

----- ERROR
error: Double variable assignment
  ┌─ /src/one/two.gleam:1:19
  │
1 │ let assert <<a as b>> = <<>>
  │                   ^

This pattern assigns to two different variables at once, which is not
possible in bit arrays.

Hint: Remove the `as` assignment.
